<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtNota1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNota1"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edtNota1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@id/txtNota1"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txtNota2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNota2"
        android:layout_below="@id/edtNota1"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edtNota2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNota2"
        android:ems="10"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnCalcularNota"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNota2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="#ACB5C2"
        android:text="@string/btnCalcularNota" />

    <Button
        android:id="@+id/btnCalcularAf"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCalcularNota"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btnCalcularNotaAf" />

    <TextView
        android:id="@+id/txtNotaFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNota2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/txtSituacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNotaFinal"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>